--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 		});
 	});
 </script>
+<style>
+.logo{height:50px; 
+weight:50px;
+margin:0px,0px;}
+.btn_pink {padding: 2 4 0 4;
+font-size:12px;
+height:23;
+background-color:#CF0C68;
+border-width:1;}
+</style>
 <!-- start-smoth-scrolling -->
 </head>
 <body>
@@ -34,7 +44,8 @@
 	<div class="container">
 	  <div class="header-main">
 	     <div class="logo">
-		    <h1><a href="index.html"><span class="logo-clr">G</span>IGSEEK</a>		 </h1>
+		 <a href="/"><img class="logo" src="images/TransparentLogo.png"/></a>
+            
 	     </div>
 	     <div class="top-nav">
 		 	 <span class="menu"> <img src="images/icon.png" alt=""></span>	
@@ -42,7 +53,7 @@
 					<ul class="res">
 						<li><a href="#home" class="scroll active">Profile</a></li>
 						<li><a href="#about" class="scroll">Services</a></li>
-						<li><a href="#team" class="scroll">Jobs</a></li>
+						<li><a href="#team" class="scroll">Team</a></li>
 						<li><a href="#services" class="scroll">Learning</a></li>
 						<li><a href="#gallery" class="scroll">Network</a></li>	
 						<li><a href="#contact" class="scroll">Contact</a></li>						
@@ -68,10 +79,17 @@
 <div class="banner">
 	<div class="container">
 		<div class="banner-main">
-			   <h3>We are design agency</h3>
-			   <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-			<div class="clearfix"> </div>
+			   <h3>We are Gigseek</h3>
+			   <h2>No CV, No Jobs.</h2>
+			<div class="clearfix"> </div><br/><br/>
+             <a href="#"><h3>Enterprise</h3></a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="#">  <h3>Job Hunter</h3></a>
 		</div>
+        <div>
+
+        </div>
 	</div>
 </div>
 <!--banner end here-->
@@ -80,8 +98,8 @@
 	<div class="container">
 		<div class="about-main-w3l">
 			<div class="about-top-w3l">
-			   <h3>About</h3>
-			   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+			   <h3>Profile</h3>
+			   <p>Edit profile including E-mail, Location, Skills, Education, Vocational experience, Interest.</p>
 			</div>
 			<div class="about-bottom-w3l">
 				<div class="col-md-4 about-grid">
@@ -208,8 +226,8 @@
 			
 		</div>
 		<div class="col-md-6 design1-right">
-			<h3>Lorem ipsum dolor sit amet</h3>
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h3>Let's Go for Jobs.</h3>
+			<p>Here, present carrer fair.</p>
 		</div>
 	   <div class="clearfix"> </div>
 	</div>
@@ -221,7 +239,7 @@
 		<div class="services-main-agile">
 			   <div class="service-top-agile">
 				   <h3>Our Services</h3>
-				   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+				   <p>Here, we will give the detail about our service</p>
 			  </div>
 			  <div class="services-bottom">
 			  	 <div class="col-md-7 services-bottom-left">
@@ -230,7 +248,7 @@
 			  			   <span><img src="images/d4.png" alt=""></span>
 			  			</div>
 			  			<div class="col-md-10 ser-text">
-			  				<h4>Excepteur sint</h4>
+			  				<h4>Java Developer</h4>
 			  				<p>But in certain circumstances and owing to the claims of duty or the obligations.</p>
 			  			</div>
 			  			<div class="clearfix"> </div>
@@ -240,7 +258,7 @@
 			  			   <span><img src="images/d7.png" alt=""></span>
 			  			</div>
 			  			<div class="col-md-10 ser-text">
-			  				<h4>Graphic Design</h4>
+			  				<h4>Graphic Dveloper</h4>
 			  				<p>But in certain circumstances and owing to the claims of duty or the obligations.</p>
 			  			</div>
 			  			<div class="clearfix"> </div>
@@ -250,7 +268,7 @@
 			  			   <span><img src="images/d6.png" alt=""></span>
 			  			</div>
 			  			<div class="col-md-10 ser-text">
-			  				<h4>Lorem ipsum</h4>
+			  				<h4>Marketer</h4>
 			  				<p>But in certain circumstances and owing to the claims of duty or the obligations.</p>
 			  			</div>
 			  			<div class="clearfix"> </div>
@@ -264,11 +282,11 @@
 			  		 </div>
 			  		 <div class="col-md-4 ser-crl1">
 				      <div class="demo-5" data-percent="65"> </div>
-				      <h4>Lorem</h4>
+				      <h4>Marketing</h4>
 				     </div>
 				     <div class="col-md-4 ser-crl1">
 				      <div class="demo-6" data-percent="40"> </div>
-				      <h4>voluptatem</h4>
+				      <h4>Volunteer</h4>
 				     </div>
 				     <div class="clearfix"> </div>
 			  	 </div>
@@ -391,8 +409,8 @@
 <div class="gallery" id="gallery">
    <div class="container">
 	  <div class="gallery-top ">
-			<h3>Gallery</h3>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+			<h3>Network</h3>
+			<p>Create your network.</p>
 		</div>	
 		<div class="sap_tabs">
 			
@@ -916,11 +934,11 @@
 	<div class="container">
 		<div class="footer-main">
 			<ul>
-				<li><a href="#home" class="scroll active">Home</a></li>
-				<li><a href="#about" class="scroll">About</a></li>
-				<li><a href="#team" class="scroll">Team</a></li>
-				<li><a href="#services" class="scroll">Services</a></li>
-				<li><a href="#gallery" class="scroll">Gallery</a></li>	
+				<li><a href="#home" class="scroll active">Profile</a></li>
+				<li><a href="#about" class="scroll">Services</a></li>
+				<li><a href="#team" class="scroll">Jobs</a></li>
+				<li><a href="#services" class="scroll">Learning</a></li>
+				<li><a href="#gallery" class="scroll">Network</a></li>	
 				<li><a href="#contact" class="scroll">Contact</a></li>						
 			</ul>
 		</div>
