--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ border-width:1;}
 	<div class="container">
 		<div class="banner-main">
 			   <h3>We are Gigseek</h3>
-			   <h2>No CV, No Jobs.</h2>
+			   <h2>A Guranteed Job, With NO CV</h2>
 			<div class="clearfix"> </div><br/><br/>
              <a href="#"><h3>Enterprise</h3></a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
