--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@ border-width:1;}
 		<div class="about-main-w3l">
 			<div class="about-top-w3l">
 			   <h3>About Us</h3>
-			   <p>We are a team that comes from foreign countries (different than Sweden). Like foreigners, we are facing with a problems that are connected to integrationg in the Swedish work system. In order to overcome these problems, we came with an idea of how to solve the integration without being discriminated. The GigSeek platform is a solution for foreigners, so that there will be no waste of talents from one side, and better integration from another side. This platform offers:</p>
+			   <p>GigSeek is platform made to gurantee humanitic hiring process.
+				   Applicants face discrimination  due to thier: Skin Color, Sexual Orientation, reliegon...etc.
+			      with GigSeek no need for CV or interviews. GeekSeek gurantess a fair hiring process based on SKILLS and ONLY SKILLS
+				
+				 </p>
 			</div>
 			<div class="about-bottom-w3l">
 				<div class="col-md-4 about-grid">
